add basic HAL handler

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ lib_deps =
     
 build_flags = 
     -D CORE_DEBUG_LEVEL=4
-    -D DEV_SETUP=0
+    ;-D DEV_SETUP=0
 
 [env:heltec_wifi_lora_32_V2]
 platform = espressif32
