add board to ini file

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,3 +23,11 @@ framework = arduino
 lib_deps = ${common.lib_deps}
 build_flags = ${common.build_flags}
 monitor_speed = 115200
+
+[env:esp32doit-devkit-v1]
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = arduino
+lib_deps = ${common.lib_deps}
+build_flags = ${common.build_flags}
+monitor_speed = 115200
