--- a/.travis.yml
+++ b/.travis.yml
@@ -65,3 +65,16 @@
 #
 # script:
 #     - platformio ci --lib="." --board=ID_1 --board=ID_2 --board=ID_N
+
+language: python
+python:
+    - "2.7"
+sudo: false
+cache:
+    directories:
+        - "~/.platformio"
+install:
+    - pip install -U platformio
+    - platformio update
+script:
+    - platformio run
