--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,8 @@
 
 [common]
 lib_deps = 
-    esp32_https_server@^0.2.4
+    SparkFun BQ72441 LiPo Fuel Gauge Arduino Library@>=1.0.1
+    esp32_https_server@>=0.2.4
     
 build_flags = 
     -D CORE_DEBUG_LEVEL=4
