add new board esp32 wemos

--- a/platformio.ini
+++ b/platformio.ini
@@ -32,3 +32,11 @@ framework = arduino
 lib_deps = ${common.lib_deps}
 build_flags = ${common.build_flags}
 monitor_speed = 115200
+
+[env:wemosbat]
+platform = espressif32
+board = wemosbat
+framework = arduino
+lib_deps = ${common.lib_deps}
+build_flags = ${common.build_flags}
+monitor_speed = 115200
