--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,13 @@
 #
 # script:
 #     - platformio ci --lib="." --board=ID_1 --board=ID_2 --board=ID_N
-
+#
+#
+notifications:
+    slack:
+        rooms:
+            - org_name:slack_token#core-dev
+# 
 language: python
 python:
     - "2.7"
@@ -79,7 +85,4 @@ install:
 script:
     - platformio run
 
-notifications:
-    slack:
-        rooms:
-            - [org_name]:[slack_token]#core-dev
+
