--- a/.travis.yml
+++ b/.travis.yml
@@ -80,6 +80,4 @@ script:
     - platformio run
 
 notifications:
-    slack:
-        rooms:
-            - org_name:slack_token#core-dev
+    slack: org_name:slack_token
