add test_ignore param

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,7 @@ build_flags =
 platform = espressif32
 board = heltec_wifi_lora_32_V2
 framework = arduino
+test_ignore = test_desktop
 lib_deps = ${common.lib_deps}
 build_flags = ${common.build_flags}
 monitor_speed = 115200
@@ -29,6 +30,7 @@ monitor_speed = 115200
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+test_ignore = test_desktop
 lib_deps = ${common.lib_deps}
 build_flags = ${common.build_flags}
 monitor_speed = 115200
@@ -37,6 +39,7 @@ monitor_speed = 115200
 platform = espressif32
 board = wemosbat
 framework = arduino
+test_ignore = test_desktop
 lib_deps = ${common.lib_deps}
 build_flags = ${common.build_flags}
 monitor_speed = 115200
