created freeRTOS Bootstrap

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,10 +9,6 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [common]
-lib_deps = 
-    SparkFun BQ72441 LiPo Fuel Gauge Arduino Library@>=1.0.1
-    esp32_https_server@>=0.2.4
-    
 build_flags = 
     -D CORE_DEBUG_LEVEL=4
     ;-D DEV_SETUP=0
@@ -20,16 +16,16 @@ build_flags =
 [env:heltec_wifi_lora_32_V2]
 platform = espressif32
 board = heltec_wifi_lora_32_V2
-framework = arduino
+framework = arduino, espidf
 test_ignore = test_desktop
 lib_deps = ${common.lib_deps}
 build_flags = ${common.build_flags}
 monitor_speed = 115200
 
-[env:esp32doit-devkit-v1]
+[env:featheresp32]
 platform = espressif32
-board = esp32doit-devkit-v1
-framework = arduino
+board = featheresp32
+framework = arduino, espidf
 test_ignore = test_desktop
 lib_deps = ${common.lib_deps}
 build_flags = ${common.build_flags}
@@ -38,7 +34,7 @@ monitor_speed = 115200
 [env:wemosbat]
 platform = espressif32
 board = wemosbat
-framework = arduino
+framework = arduino, espidf
 test_ignore = test_desktop
 lib_deps = ${common.lib_deps}
 build_flags = ${common.build_flags}
