--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,15 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [common]
+lib_deps =
+    ; SparkFun BQ72441 LiPo Fuel Gauge Arduino Library@>=1.0.1
+    ; esp32_https_server@>=0.3.0
 build_flags = 
+    ; NO_LOGS   =>  0
+    ; LOG_E     =>  1
+    ; LOG_I     =>  2
+    ; LOG_D     =>  3
+    ; LOG_V     =>  4
     -D CORE_DEBUG_LEVEL=4
     ;-D DEV_SETUP=0
 
