Use ESP-IDF directly for Wi-Fi

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@ build_flags =
 [env:featheresp32]
 platform = espressif32
 board = featheresp32
-framework = arduino, espidf
+framework = espidf
 lib_deps = ${common.lib_deps}
 build_flags = ${common.build_flags}
 monitor_speed = 115200
@@ -25,7 +25,16 @@ test_ignore = test_desktop
 [env:wemosbat]
 platform = espressif32
 board = wemosbat
-framework = arduino, espidf
+framework = espidf
+lib_deps = ${common.lib_deps}
+build_flags = ${common.build_flags}
+monitor_speed = 115200
+test_ignore = test_desktop
+
+[env:esp32doit-devkit-v1]
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = espidf
 lib_deps = ${common.lib_deps}
 build_flags = ${common.build_flags}
 monitor_speed = 115200
