use custom partitions

--- a/platformio.ini
+++ b/platformio.ini
@@ -39,3 +39,4 @@ lib_deps = ${common.lib_deps}
 build_flags = ${common.build_flags}
 monitor_speed = 115200
 test_ignore = test_desktop
+board_build.partitions = partitions_custom.csv
