--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,7 @@ lib_deps = ${common.lib_deps}
 build_flags = ${common.build_flags}
 monitor_speed = 115200
 test_ignore = test_desktop
+board_build.partitions = partitions_custom.csv
 
 [env:wemosbat]
 platform = espressif32
@@ -30,6 +31,7 @@ lib_deps = ${common.lib_deps}
 build_flags = ${common.build_flags}
 monitor_speed = 115200
 test_ignore = test_desktop
+board_build.partitions = partitions_custom.csv
 
 [env:esp32doit-devkit-v1]
 platform = espressif32
