--- a/.travis.yml
+++ b/.travis.yml
@@ -79,6 +79,7 @@ before_install:
 
 install:
     - pip install -U travis-sphinx
+    - pip install -U sphinx-rtd-theme
     - pip install -U breathe
     - pip install -U exhale
     - pip install -U platformio
