--- a/platformio.ini
+++ b/platformio.ini
@@ -30,6 +30,9 @@ lib_deps = ${common.lib_deps}
 build_flags = ${common.build_flags}
 monitor_speed = 115200
 test_ignore = test_desktop
+upload_port = /dev/ttyUSB1
+monitor_port = /dev/ttyUSB1
+test_port = /dev/ttyUSB1
 
 [env:esp32doit-devkit-v1]
 platform = espressif32
