--- a/platformio.ini
+++ b/platformio.ini
@@ -44,6 +44,7 @@ monitor_speed = 115200
 test_ignore = test_desktop
 board_build.partitions = partitions_custom.csv
 upload_port = /dev/ttyUSB1
+monitor_port = /dev/ttyUSB1
 
 [env:esp32doit-devkit-v1]
 platform = espressif32
