--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-.pio
-.pioenvs
-.piolibdeps
 .vscode
 *.code-workspace
 dev-setup.h
@@ -8,3 +5,5 @@ message_exchange.*
 doc/_build
 doc/api
 doc/doxyoutput
+build/
+sdkconfig.old
