Return proper error values on the API.
Signed-off-by: Jean Pierre Dudey <jeandudey@hotmail.com>

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,6 +3,7 @@ idf_component_register(SRCS "main.cpp"
                        REQUIRES
                            BLE
                            BLEPreferences
+                           ESC
                            Network
                            NVS
                            Radio
