--- a/components/ESC/CMakeLists.txt
+++ b/components/ESC/CMakeLists.txt
@@ -1,3 +1,4 @@
 file(GLOB_RECURSE SOURCES src/*.cpp)
 idf_component_register(SRCS ${SOURCES}
-                       INCLUDE_DIRS src)
+                       INCLUDE_DIRS src
+                       REQUIRES Task Util)
