Use a Ringbuffer to transmit data from WebSockets.
Signed-off-by: Jean Pierre Dudey <jeandudey@hotmail.com>

--- a/components/TxBuffer/CMakeLists.txt
+++ b/components/TxBuffer/CMakeLists.txt
@@ -2,5 +2,4 @@ file(GLOB_RECURSE SOURCES src/*.cpp)
 idf_component_register(SRCS ${SOURCES}
                        INCLUDE_DIRS
                           src
-                          ../../main
-                       REQUIRES Task TxBuffer)
+                          REQUIRES WS)
