--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -9,4 +9,5 @@ idf_component_register(SRCS "main.cpp"
                            Radio
                            Task
                            Util
-                           WS)
+                           WS
+                           HMI)
