--- a/.travis.yml
+++ b/.travis.yml
@@ -44,17 +44,15 @@ install:
 
 jobs:
   include:
-    stage: "Documentation"
-    name: "Documentatiom Deploy"
-    script:
-      - cd $PROJECT_PATH
-      - travis-sphinx build --nowarn --source doc/
+    - stage: "Documentation"
+      script:
+        - cd $PROJECT_PATH
+        - travis-sphinx build --nowarn --source doc/
 
-    stage: "Build"
-    name: "Build Firmware"
-    script: 
-      - cd $PROJECT_PATH
-      - idf.py build
+    - stage: "Build"
+      script: 
+        - cd $PROJECT_PATH
+        - idf.py build
       
 
 
