--- a/.travis.yml
+++ b/.travis.yml
@@ -48,12 +48,12 @@ install:
 jobs:
   include:
     - stage: "CI"
-      script: "./dist/tools/codespell/check.sh"
-      script: idf.py build
-      script: ls -la
+      - script: "./dist/tools/codespell/check.sh"
+      - script: idf.py build
+      - script: ls -la
     - stage: "CD"
-      script: travis-sphinx build --nowarn --source doc/
-      script: travis-sphinx deploy --branches dev
+      - script: travis-sphinx build --nowarn --source doc/
+      - script: travis-sphinx deploy --branches dev
 
 env:
   global:
