--- a/.travis.yml
+++ b/.travis.yml
@@ -47,13 +47,15 @@ install:
 
 jobs:
   include:
-    - name: "Codespell"
+    # stage 1
+      name: "Codespell"
     - script: ./dist/tools/codespell/check.sh
-    - name: "Build"
+      name: "Build"
     - script: idf.py build
+    # stage 2
     - stage: "CD"
-      script: travis-sphinx build --nowarn --source doc/
-      script: travis-sphinx deploy --branches dev
+      - script: travis-sphinx build --nowarn --source doc/
+      - script: travis-sphinx deploy --branches dev
 
 env:
   global:
