--- a/.travis.yml
+++ b/.travis.yml
@@ -55,7 +55,8 @@ jobs:
     - name: "Unit-Tests"
       script: idf.py -T all build
     # Stage 2 - Deploying
-    stage: "Deploy"
+    - stage: "Deploy"
+      - name: "Deploy Documentation"
       script: travis-sphinx build --nowarn --source doc/
       script: travis-sphinx deploy --branches dev
 
