--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ install:
 jobs:
   include:
     # Stage 1 - Testing
-    stage: "Test"
+    - stage: "Test"
       - name: "Codespell-Test"
         script: ./dist/tools/codespell/check.sh
       - name: "Build-Test"
@@ -56,9 +56,10 @@ jobs:
       - name: "Unit-Tests"
         script: idf.py -T all build
     # Stage 2 - Deploying
-    stage: "Deploy"
-      - name: "Deploy Documentation"
+    - stage: "Deploy"
+      - name: "Build Documentation"
         script: travis-sphinx build --nowarn --source doc/
+      - name: "Deploy Documention"
         script: travis-sphinx deploy --branches dev
 
 env:
