--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,7 @@ install:
 jobs:
   include:
     # Stage 1 - Testing
+    stage: test
       - name: "Codespell-Test"
         script: ./dist/tools/codespell/check.sh
       - name: "Build-Test"
@@ -55,10 +56,11 @@ jobs:
       - name: "Unit-Tests"
         script: idf.py -T all build
     # Stage 2 - Deploying
+    stage: deploy
       - name: "Build Documentation"
-        script: travis-sphinx build --nowarn --source doc/
-      - name: "Deploy Documention"
-        script: travis-sphinx deploy --branches dev
+        script: 
+          - travis-sphinx build --nowarn --source doc/
+          - travis-sphinx deploy --branches dev
 
 env:
   global:
