--- a/.travis.yml
+++ b/.travis.yml
@@ -47,20 +47,14 @@ install:
 
 jobs:
   include:
-    # Stage 1 - Testing
     stage: test
-      - name: "Codespell-Test"
-        script: ./dist/tools/codespell/check.sh
-      - name: "Build-Test"
-        script: idf.py build
-      - name: "Unit-Tests"
-        script: idf.py -T all build
-    # Stage 2 - Deploying
+      script: ./dist/tools/codespell/check.sh
+      script: idf.py build
+      script: idf.py -T all build
     stage: deploy
-      - name: "Build Documentation"
-        script: 
-          - travis-sphinx build --nowarn --source doc/
-          - travis-sphinx deploy --branches dev
+      script: 
+        - "travis-sphinx build --nowarn --source doc/"
+        - "travis-sphinx deploy --branches dev"
 
 env:
   global:
