--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,7 @@ jobs:
     - name: "Testing"
       script: idf.py --help
     - stage: "Deploy"
+    - name: "Deploy documentation"
       script: "ls -la"
           #- "travis-sphinx build --nowarn --source doc/"
           #- "travis-sphinx deploy --branches dev"
