--- a/.travis.yml
+++ b/.travis.yml
@@ -21,12 +21,14 @@ addons:
       - flex
       - bison
 
+
 before_install:
 - sudo apt-get -y install doxygen
 # Save path to the git respository
 - PROJECT_PATH=$(pwd)
 
 install:
+- pip install -U codespell
 - pip install -U travis-sphinx
 - pip install -U sphinx-rtd-theme
 - pip install -U breathe
@@ -41,14 +43,24 @@ install:
 - export IDF_PATH=~/esp/esp-idf
 - export PATH=$PATH:$HOME/esp/esp-idf/tools
 - . $HOME/esp/esp-idf/export.sh
-
-script:
-# Go back to the git repository
 - cd $PROJECT_PATH
-- travis-sphinx build --nowarn --source doc/
-- idf.py build
-after_success:
-- travis-sphinx deploy --branches dev
+
+jobs:
+  include:
+    # Code spell
+    - name: "Code-spell" 
+      script: ./dist/tools/codespell/check.sh
+    # Build test
+    - name: "Build-Test"
+      script: idf.py build
+    # Run unit-tests
+    - name: "Unit-Test"
+      script: idf.py --help
+    # Build and deploy documentation
+    - name: "Deploy documentation"
+      script: 
+          - "travis-sphinx build --nowarn --source doc/"
+          - "travis-sphinx deploy --branches dev"
 
 env:
   global:
