removing fixed ip

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -9,4 +9,4 @@ idf_component_register(SRCS "main.cpp"
                            Radio
                            Task
                            Util
-                           WS)
+                           HTTP)
