--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ addons:
 
 before_install:
 - sudo apt-get -y install doxygen
-# Save path to the git respository
+# Save path to the git repository
 - PROJECT_PATH=$(pwd)
 
 install:
@@ -33,7 +33,7 @@ install:
 - pip install -U sphinx-rtd-theme
 - pip install -U breathe
 - pip install -U exhale
-# Install ESP32 toochain following steps as desribed
+# Install ESP32 toochain following steps as described
 # in https://docs.espressif.com/projects/esp-idf/en/latest/get-started/#get-started-get-prerequisites
 - mkdir -p ~/esp
 - cd ~/esp
