--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -7,4 +7,5 @@ idf_component_register(SRCS "main.cpp"
                            Radio
                            Task
                            Util
-                           HTTP)
+                           HTTP
+                           HMI)
