--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
-dist: xenial
+dist: bionic
 language: generic
-os: 
-  - linux
 
 addons:
   apt:
@@ -27,11 +25,11 @@ before_install:
 - PROJECT_PATH=$(pwd)
 
 install:
-- pip install -U codespell
-- pip install -U travis-sphinx
-- pip install -U sphinx-rtd-theme
-- pip install -U breathe
-- pip install -U exhale
+- pip3 install -U --user codespell
+- pip3 install -U --user travis-sphinx
+- pip3 install -U --user sphinx-rtd-theme
+- pip3 install -U --user breathe
+- pip3 install -U --user exhale
 # Install ESP32 toochain following steps as described
 # in https://docs.espressif.com/projects/esp-idf/en/latest/get-started/#get-started-get-prerequisites
 - mkdir -p ~/esp
