--- a/.travis.yml
+++ b/.travis.yml
@@ -17,19 +17,20 @@ addons:
       - libncurses-dev
       - flex
       - bison
+      - doxygen
 
 
 before_install:
-- sudo apt-get -y install doxygen
+# - sudo apt-get -y install doxygen
 # Save path to the git repository
 - PROJECT_PATH=$(pwd)
 
 install:
-- pip3 install -U --user codespell
-- pip3 install -U --user travis-sphinx
-- pip3 install -U --user sphinx-rtd-theme
-- pip3 install -U --user breathe
-- pip3 install -U --user exhale
+- sudo pip install -U codespell
+- sudo pip install -U travis-sphinx
+- sudo pip install -U sphinx-rtd-theme
+- sudo pip install -U breathe
+- sudo pip install -U exhale
 # Install ESP32 toochain following steps as described
 # in https://docs.espressif.com/projects/esp-idf/en/latest/get-started/#get-started-get-prerequisites
 - mkdir -p ~/esp
