--- a/.travis.yml
+++ b/.travis.yml
@@ -6,17 +6,25 @@ addons:
     packages:
       - git
       - wget
+      - flex
+      - bison
       - make
       - gperf
       - python3
       - python3-pip
+      - python-setuptools
       - python-serial
-      - python-future
+      - python-click
       - python-cryptography
+      - python-future
       - python-pyparsing
+      - python-pyelftools
+      - cmake
+      - ninja-build
+      - ccache
+      - libffi-dev
+      - libssl-dev
       - libncurses-dev
-      - flex
-      - bison
       - doxygen
 
 
@@ -26,11 +34,11 @@ before_install:
 - PROJECT_PATH=$(pwd)
 
 install:
-- sudo pip3 install -U codespell
-- sudo pip3 install -U travis-sphinx
-- sudo pip3 install -U sphinx-rtd-theme
-- sudo pip3 install -U breathe
-- sudo pip3 install -U exhale
+- sudo pip3 install -U -H codespell
+- sudo pip3 install -U -H travis-sphinx
+- sudo pip3 install -U -H sphinx-rtd-theme
+- sudo pip3 install -U -H breathe
+- sudo pip3 install -U -H exhale
 # Install ESP32 toochain following steps as described
 # in https://docs.espressif.com/projects/esp-idf/en/latest/get-started/#get-started-get-prerequisites
 - mkdir -p ~/esp
