--- a/.travis.yml
+++ b/.travis.yml
@@ -34,11 +34,11 @@ before_install:
 - PROJECT_PATH=$(pwd)
 
 install:
-- sudo pip3 install -U -H codespell
-- sudo pip3 install -U -H travis-sphinx
-- sudo pip3 install -U -H sphinx-rtd-theme
-- sudo pip3 install -U -H breathe
-- sudo pip3 install -U -H exhale
+- pip3 install -U codespell
+- pip3 install -U travis-sphinx
+- pip3 install -U sphinx-rtd-theme
+- pip3 install -U breathe
+- pip3 install -U exhale
 # Install ESP32 toochain following steps as described
 # in https://docs.espressif.com/projects/esp-idf/en/latest/get-started/#get-started-get-prerequisites
 - mkdir -p ~/esp
