--- a/.travis.yml
+++ b/.travis.yml
@@ -34,11 +34,11 @@ before_install:
 - PROJECT_PATH=$(pwd)
 
 install:
-- pip3 install -U codespell
-- pip3 install -U travis-sphinx
-- pip3 install -U sphinx-rtd-theme
-- pip3 install -U breathe
-- pip3 install -U exhale
+- pip install -U codespell
+- pip install -U travis-sphinx
+- pip install -U sphinx-rtd-theme
+- pip install -U breathe
+- pip install -U exhale
 # Install ESP32 toochain following steps as described
 # in https://docs.espressif.com/projects/esp-idf/en/latest/get-started/#get-started-get-prerequisites
 - mkdir -p ~/esp
