Fix travis file
git checkout esp-idf to commit 6330b3345e87eb4401e7be7c8b6fea2870c35d9f`

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,8 +41,9 @@ install:
 # in https://docs.espressif.com/projects/esp-idf/en/latest/get-started/#get-started-get-prerequisites
 - mkdir -p ~/esp
 - cd ~/esp
-- git clone --recursive https://github.com/espressif/esp-idf.git -b release/v4.0
+- git clone --recursive https://github.com/espressif/esp-idf.git
 - cd ~/esp/esp-idf
+- git checkout 6330b3345e87eb4401e7be7c8b6fea2870c35d9f
 - ./install.sh
 - export IDF_PATH=~/esp/esp-idf
 - export PATH=$PATH:$HOME/esp/esp-idf/tools
