Revert "Feature/https server"

--- a/components/HTTP/CMakeLists.txt
+++ b/components/HTTP/CMakeLists.txt
@@ -3,7 +3,4 @@ idf_component_register(SRCS ${SOURCES}
                        INCLUDE_DIRS
                            src
                            ../../main
-                       REQUIRES esp_https_server json ESC Network NVS
-                       EMBED_TXTFILES "certs/cacert.pem"
-                                   "certs/prvtkey.pem")
-                  
+                       REQUIRES esp_http_server json ESC Network NVS)
