--- a/components/Util/CMakeLists.txt
+++ b/components/Util/CMakeLists.txt
@@ -1,3 +1,4 @@
 file(GLOB_RECURSE SOURCES src/*.cpp)
 idf_component_register(SRCS ${SOURCES}
+                       REQUIRES cbor
                        INCLUDE_DIRS src)
