--- a/components/HTTP/test/CMakeLists.txt
+++ b/components/HTTP/test/CMakeLists.txt
@@ -1,4 +1,4 @@
 
 idf_component_register(SRC_DIRS "."
                        INCLUDE_DIRS "."
-                       REQUIRES HTTP NVS unity esp_https_server)
+                       REQUIRES HTTP NVS unity)
