--- a/.travis.yml
+++ b/.travis.yml
@@ -41,9 +41,8 @@ install:
 # in https://docs.espressif.com/projects/esp-idf/en/latest/get-started/#get-started-get-prerequisites
 - mkdir -p ~/esp
 - cd ~/esp
-- git clone --recursive https://github.com/espressif/esp-idf.git
+- git clone --recursive https://github.com/btcven/esp-idf.git -b feature/slip
 - cd ~/esp/esp-idf
-- git checkout c9f29e0b59988779bf0792e2e954c3448fd37e3b
 - ./install.sh
 - export IDF_PATH=~/esp/esp-idf
 - export PATH=$PATH:$HOME/esp/esp-idf/tools
