--- a/.travis.yml
+++ b/.travis.yml
@@ -27,27 +27,8 @@ addons:
       - libncurses-dev
       - doxygen
 
-before_install:
-# Save path to the git repository
-- PROJECT_PATH=$(pwd)
-
 install:
 - pip3 install -U codespell
-- pip3 install -U travis-sphinx
-- pip3 install -U sphinx-rtd-theme
-- pip3 install -U breathe
-- pip3 install -U exhale
-# Install ESP32 toochain following steps as described
-# in https://docs.espressif.com/projects/esp-idf/en/latest/get-started/#get-started-get-prerequisites
-- mkdir -p ~/esp
-- cd ~/esp
-- git clone --recursive https://github.com/btcven/esp-idf.git -b feature/slip
-- cd ~/esp/esp-idf
-- ./install.sh
-- export IDF_PATH=~/esp/esp-idf
-- export PATH=$PATH:$HOME/esp/esp-idf/tools
-- . $HOME/esp/esp-idf/export.sh
-- cd $PROJECT_PATH
 
 jobs:
   include:
@@ -56,10 +37,17 @@ jobs:
       script: ./dist/tools/codespell/check.sh
     # Build test
     - name: "Build-Test"
-      script: idf.py build
-    # Run unit-tests
-    - name: "Unit-Test"
-      script: idf.py --help
+      before_script:
+       - mkdir -p $HOME/esp
+       - git -C $HOME/esp clone https://github.com/gschorcht/xtensa-esp32-elf.git
+       - export PATH=$PATH:$HOME/esp/xtensa-esp32-elf/bin
+       - git -C $HOME/esp clone https://github.com/espressif/esp-idf.git
+       - git -C $HOME/esp checkout f198339ec09e90666150672884535802304d23ec
+       - git -C $HOME/esp submodule init
+       - git -C $HOME/esp submodule update
+
+      script:
+       - make
     # Build and deploy documentation
     - name: "Deploy documentation"
       script:
