--- a/.travis.yml
+++ b/.travis.yml
@@ -50,10 +50,10 @@ jobs:
       script:
        - make
     # Build and deploy documentation
-    - name: "Deploy documentation"
-      script:
-          - "travis-sphinx build --nowarn --source doc/"
-          - "travis-sphinx deploy --branches dev"
+    #- name: "Deploy documentation"
+    #  script:
+    #      - "travis-sphinx build --nowarn --source doc/"
+    #      - "travis-sphinx deploy --branches dev"
 
 env:
   global:
