--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,8 @@ install:
 jobs:
   include:
     # Code spell
-    #- name: "Code-spell"
-    #  script: ./dist/tools/codespell/check.sh
+    - name: "Code-spell"
+      script: ./dist/tools/codespell/check.sh
     # Build test
     - name: "Build-Test"
       before_script:
