sys: add `net` and `vaina` modules
Signed-off-by: Jean Pierre Dudey <jeandudey@hotmail.com>

--- a/sys/Makefile
+++ b/sys/Makefile
@@ -1,3 +1,7 @@
 MODULE = turpial_firmware_sys
 
+ifneq (,$(filter turpial_firmware_net,$(USEMODULE)))
+  DIRS += net
+endif
+
 include $(RIOTBASE)/Makefile.base
