suggested changes added

--- a/sys/Makefile
+++ b/sys/Makefile
@@ -2,6 +2,9 @@ MODULE = turpial_firmware_sys
 
 ifneq (,$(filter turpial_firmware_net,$(USEMODULE)))
   DIRS += net
+endif
+
+ifneq (,$(filter turpial_firmware_storage,$(USEMODULE)))
   DIRS += storage
 endif
 
