--- a/sys/Makefile.dep
+++ b/sys/Makefile.dep
@@ -9,3 +9,10 @@ ifneq (,$(filter nvs,$(USEMODULE)))
   USEMODULE += turpial_firmware_storage
   USEMODULE += esp_idf_nvs_flash
 endif
+
+
+ifneq (,$(filter wifi_settings,$(USEMODULE)))
+  USEMODULE += turpial_firmware_storage
+  USEMODULE += nvs
+  USEMODULE += sock_udp
+endif
