--- a/sys/storage/Makefile
+++ b/sys/storage/Makefile
@@ -4,4 +4,9 @@ ifneq (,$(filter vaina,$(USEMODULE)))
   DIRS += nvs
 endif
 
+
+ifneq (,$(filter wifi_settings,$(USEMODULE)))
+  DIRS += wifiSettings
+endif
+
 include $(RIOTBASE)/Makefile.base
