--- a/sys/net/Makefile
+++ b/sys/net/Makefile
@@ -4,4 +4,9 @@ ifneq (,$(filter vaina,$(USEMODULE)))
   DIRS += vaina
 endif
 
+
+ifneq (,$(filter turpial_firmware_coap,$(USEMODULE)))
+  DIRS += coap
+endif
+
 include $(RIOTBASE)/Makefile.base
