--- a/sys/Makefile.dep
+++ b/sys/Makefile.dep
@@ -16,6 +16,15 @@ endif
 
 
 ifneq (,$(filter turpial_firmware_coap,$(USEMODULE)))
-  USEMODULE += gcoap
   USEMODULE += turpial_firmware_net
+  USEMODULE += gnrc_netdev_default
+  USEMODULE += auto_init_gnrc_netif
+  USEMODULE += gnrc_ipv6_default
+  USEMODULE += gnrc_udp
+  USEMODULE += gnrc_sock_udp
+  USEMODULE += shell_commands
+  USEMODULE += gnrc_icmpv6_echo
+  USEMODULE += fmt
+  USEMODULE += gnrc_icmpv6_echo
+  USEMODULE += gcoap
 endif
