--- a/sys/Makefile
+++ b/sys/Makefile
@@ -8,4 +8,8 @@ ifneq (,$(filter turpial_firmware_storage,$(USEMODULE)))
   DIRS += storage
 endif
 
+ifneq (,$(filter cjson,$(USEMODULE)))
+  DIRS += cjson
+endif
+
 include $(RIOTBASE)/Makefile.base
