--- a/Kconfig
+++ b/Kconfig
@@ -1,10 +1,20 @@
 menu "Turpial Firmware configuration"
 
-config TURPIAL_GLOBAL_ADDR
-    string "Turpial default IPv6 global address"
-    default "2001:db8::1"
+menuconfig TURPIAL_STATIC_ADDRESS
+    bool "Use static address"
+    default n
+    help
+        Configure an static address, useful for development.
+
+if TURPIAL_STATIC_ADDRESS
+
+config TURPIAL_STATIC_GLOBAL_ADDR
+    string "IPv6 global address"
+    default "fc00:db8::1"
     help
         Turpial default IPv6 global address
+
+endif
 
 config TURPIAL_GLOBAL_PREFIX
     int "Prefix in bits for Turpial global address"
