kconfig: add sys to Kconfig
Signed-off-by: Jean Pierre Dudey <jeandudey@hotmail.com>

--- a/Kconfig
+++ b/Kconfig
@@ -1,5 +1,7 @@
 menu "Turpial Firmware configuration"
 
+rsource "sys/Kconfig"
+
 menuconfig TURPIAL_STATIC_ADDRESS
     bool "Use static address"
     default n
