app: move ESP32 application to wifi/ dir.
Signed-off-by: Jean Pierre Dudey <me@jeandudey.tech>

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ jobs:
        - export ESP32_SDK_DIR=$HOME/esp/esp-idf
 
       script:
-       - make
+       - make -C wifi
     # Build and deploy documentation
     #- name: "Deploy documentation"
     #  script:
