core: add folder for common modules
Signed-off-by: Jean Pierre Dudey <me@jeandudey.tech>

--- a/mesh/Makefile
+++ b/mesh/Makefile
@@ -2,6 +2,7 @@ APPLICATION = mesh-subsys
 BOARD ?= turpial-cc1312
 
 EXTERNAL_BOARD_DIRS ?= $(CURDIR)/../boards
+EXTERNAL_MODULE_DIRS += $(CURDIR)/../core
 EXTERNAL_MODULE_DIRS += sys
 
 RIOTBASE ?= $(CURDIR)/../RIOT
