.travis.yml: build the mesh-subsys application
Signed-off-by: Jean Pierre Dudey <me@jeandudey.tech>

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,9 +46,13 @@ jobs:
        - git -C $HOME/esp/esp-idf submodule init
        - git -C $HOME/esp/esp-idf submodule update
        - export ESP32_SDK_DIR=$HOME/esp/esp-idf
+       - wget "https://developer.arm.com/-/media/Files/downloads/gnu-rm/10-2020q4/gcc-arm-none-eabi-10-2020-q4-major-x86_64-linux.tar.bz2"
+       - tar xvf gcc-arm-none-eabi-10-2020-q4-major-x86_64-linux.tar.bz2
+       - export PATH=$PWD/gcc-arm-none-eabi-10-2020-q4-major/bin/:$PATH
 
       script:
        - make -C wifi
+       - make -C mesh
     # Build and deploy documentation
     #- name: "Deploy documentation"
     #  script:
