--- a/boards/turpial-cc1312/Makefile.include
+++ b/boards/turpial-cc1312/Makefile.include
@@ -1,7 +1,7 @@
 XDEBUGGER = XDS110
 
 # set default port depending on operating system
-PORT_LINUX  ?= /dev/ttyACM0
+PORT_LINUX  ?= /dev/ttyUSB0
 PORT_DARWIN ?= $(firstword $(sort $(wildcard /dev/tty.usbmodem*)))
 
 # setup serial terminal
