Upload nightly only on main
Signed-off-by: Jean Pierre Dudey <me@jeandudey.tech>

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -33,6 +33,7 @@ jobs:
 
     - uses: eine/tip@master
       with:
+        if: github.ref == 'refs/heads/main'
         token: ${{ secrets.GITHUB_TOKEN }}
         tag: 'nightly'
         files: |
