--- a/boards/turpial-esp32/Kconfig
+++ b/boards/turpial-esp32/Kconfig
@@ -1,4 +1,4 @@
-# Copyright (c) 2020 Locha Inc
+# Copyright (c) 2021 btcven and Locha Mesh developers
 #
 # This file is subject to the terms and conditions of the GNU Lesser
 # General Public License v2.1. See the file LICENSE in the top level
