--- a/.github/workflows/codespell.yml
+++ b/.github/workflows/codespell.yml
@@ -12,7 +12,5 @@ jobs:
         with:
             check_filenames: false
             check_hidden: false
-            skip: RIOT,*.svg,./core/contrib,.git
-            # ignore_words_list: rsource,inout,doubleclick,crate,rsource,bufffer,trucated,calculate,childs,elments,continous,neigbor,Initalize,initalize,happend,inout
+            skip: RIOT, *.svg, core/contrib, .git
             ignore_words_file: dist/tools/codespell/ignored_words.txt
-            only_warn: 1
